kubernetes/apps/media/radarr/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr
  namespace: media
  annotations:
    external-dns.k8s.io/audience: internal
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Radarr"
    gethomepage.dev/description: "Movies"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=radarr"
    gethomepage.dev/group: "Media"
    gethomepage.dev/icon: "radarr.svg"
    gethomepage.dev/href: "https://radarr.lab.supermorphic.com"
spec:
  hostnames:
    - radarr.lab.supermorphic.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: networking
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: radarr
          port: 7878
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
